# openzeppelin-polkadot-zk

./: .gitignore  .pre-commit-config.yaml  BRAINSTORM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: checks.yaml
benchmarks/: Cargo.toml
benchmarks/benches/: block_filling.rs  verification.rs
benchmarks/src/: block_sim.rs  lib.rs  main.rs  tps.rs  verification.rs
book/: book.toml
book/examples/confidential-htlc/: Cargo.toml
book/examples/confidential-htlc/src/: lib.rs
book/examples/confidential-intents-dex/: Cargo.toml
book/examples/confidential-intents-dex/src/: lib.rs
book/examples/confidential-swaps/: Cargo.toml
book/examples/confidential-swaps/src/: lib.rs
book/examples/confidential-xcm-bridge/: Cargo.toml
book/examples/confidential-xcm-bridge/src/: lib.rs
book/examples/escrow/: Cargo.toml
book/examples/escrow/src/: lib.rs
book/examples/htlc/: Cargo.toml
book/examples/htlc/src/: lib.rs
book/src/: D0.md  IDEAS.md  N0.md  PHILOSOPHY.md  PRINCIPLES.md  R0.md  R1.md  R2.md  R3.md  R4.md  R5.md  SUMMARY.md  acl-operators.md  api.md  architecture.md  asset-hub.md  client.md  configuration.md  crypto.md  custom-backends.md  custom-ramps.md  introduction.md  polkavm-precompile.md  quickstart.md  runtime-integration.md  testing.md  xcm-setup.md
cache/: solidity-files-cache.json
contracts/: ERC7984ConfidentialToken.sol  README.md
contracts/cache/: solidity-files-cache.json  test-failures
contracts/interfaces/: IConfidentialAssets.sol  IERC7984.sol
contracts/test/: ERC7984Consumer.sol
demo/: Cargo.toml
demo/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/src/: helpers.rs  lib.rs  network.rs
integration-tests/tests/: confidential_transfer.rs  cross_chain_transfer.rs
pallets/acl/: Cargo.toml
pallets/acl/src/: lib.rs
pallets/confidential-assets/: Cargo.toml
pallets/confidential-assets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/confidential-assets/src/benchmarking/: proofs.rs
pallets/confidential-bridge/: Cargo.toml
pallets/confidential-bridge/src/: lib.rs  mock.rs  tests.rs
pallets/confidential-escrow/: Cargo.toml
pallets/confidential-escrow/src/: lib.rs  mock.rs  tests.rs
pallets/confidential-htlc/: Cargo.toml
pallets/confidential-intents-dex/: Cargo.toml
pallets/confidential-xcm-bridge/src/: lib.rs
pallets/escrow/: Cargo.toml
pallets/htlc/: Cargo.toml
pallets/operators/: Cargo.toml
pallets/operators/src/: lib.rs
pallets/zkhe/: Cargo.toml
pallets/zkhe/src/: benchmarking.rs  benchmarking_llm.rs  lib.rs  mock.rs  tests.rs  weights.rs
precompiles/confidential-assets/: Cargo.toml
precompiles/confidential-assets-evm/: Cargo.toml
precompiles/confidential-assets-evm/src/: lib.rs  mock.rs  tests.rs
precompiles/confidential-assets-revive/: Cargo.toml
precompiles/confidential-assets-revive/src/: lib.rs  tests.rs
precompiles/confidential-assets/src/: lib.rs
primitives/confidential-assets/: Cargo.toml
primitives/confidential-assets/src/: lib.rs
primitives/zkhe/: Cargo.toml
primitives/zkhe/src/: lib.rs
pvm-runtime/: Cargo.toml
pvm-runtime/src/configs/: mod.rs
runtime/: Cargo.toml  build.rs
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: confidential.rs  mod.rs  xcm_config.rs
runtimes/asset-hub/: Cargo.toml  chain_spec.json
runtimes/asset-hub/src/: lib.rs
runtimes/asset-hub/src/configs/: confidential.rs  mod.rs  xcm_config.rs
runtimes/confidential/: Cargo.toml  chain_spec.json
runtimes/confidential/src/configs/: confidential.rs  mod.rs  xcm_config.rs
runtimes/demo/: Cargo.toml
runtimes/demo/src/: main.rs  old.rs
runtimes/evm-rollup/: Cargo.toml  rustc-ice-2025-11-28T22_08_30-82878.txt
runtimes/evm-rollup/src/: lib.rs  precompiles.rs
runtimes/evm-rollup/src/configs/: evm.rs  mod.rs
runtimes/evm/src/: lib.rs  precompiles.rs
runtimes/evm/src/configs/: evm.rs  mod.rs
runtimes/polkavm/: Cargo.toml
runtimes/polkavm-rollup/: Cargo.toml
runtimes/polkavm-rollup/src/: apis.rs  lib.rs
runtimes/polkavm-rollup/src/configs/: confidential.rs  mod.rs  revive.rs  xcm_config.rs
runtimes/polkavm/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtimes/polkavm/src/configs/: confidential.rs  mod.rs
runtimes/relay/: Cargo.toml
runtimes/relay/src/: lib.rs  xcm_config.rs
runtimes/relay/src/constants/: Cargo.toml
runtimes/relay/src/constants/src/: lib.rs
runtimes/relay/src/constants/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
scripts/: check-toml-sorted.sh  generate-runtime-spec.sh  pre-commit  setup-hooks.sh  toml-sort.sh
tests/xcm-emulator/: Cargo.toml
tests/xcm-emulator/src/: main.rs  substrate.rs
tests/zombienet/: Cargo.toml  devnet.toml
tests/zombienet/src/: lib.rs
xcm/: Cargo.toml
xcm/src/: confidential_xcm_transfer.rs  lib.rs  tests.rs  vector_tests.rs
xcm/src/parachain/: confidential.rs  mod.rs
xcm/src/parachain/xcm_config/: asset_transactor.rs  constants.rs  location_converter.rs  mod.rs  origin_converter.rs
xcm/src/relay_chain/: mod.rs
xcm/src/relay_chain/xcm_config/: asset_transactor.rs  location_converter.rs  mod.rs  origin_converter.rs  teleporter.rs
zkhe/: PLAN.md
zkhe-prover/: Cargo.toml
zkhe-prover/src/: bench_vectors.rs  lib.rs  main.rs
zkhe-vectors/: Cargo.toml
zkhe-vectors/src/: generated.rs  lib.rs
zkhe-verifier/: Cargo.toml
zkhe-verifier/benches/: verify.rs
zkhe-verifier/per-block/: Cargo.toml  README.md
zkhe-verifier/per-block/src/: main.rs
zkhe-verifier/src/: lib.rs  range.rs  tests.rs
zkhe/prover/: Cargo.toml
zkhe/prover/src/: bench_vectors.rs  lib.rs  tests.rs
zkhe/vectors/: Cargo.toml
zkhe/vectors/src/: generated.rs
zkhe/verifier/: Cargo.toml
zkhe/verifier/benches/: verify.rs
zkhe/verifier/per-block/: Cargo.toml
zkhe/verifier/per-block/src/: main.rs
zkhe/verifier/src/: lib.rs  range.rs  tests.rs
