[workspace]
members = [
	# Example Extensions
	"book/examples/confidential-htlc",
	"book/examples/confidential-intents-dex",
	"book/examples/confidential-swaps",
	"book/examples/confidential-xcm-bridge",
	"book/examples/escrow",
	"book/examples/htlc",
	# Backend Pallets
	"pallets/acl",
	# Frontend Pallets
	"pallets/confidential-assets",
	"pallets/confidential-bridge",
	"pallets/confidential-escrow",
	"pallets/operators",
	"pallets/zkhe",
	# Precompiles / Chain Extensions
	"precompiles/confidential-assets-evm",
	# Primitives
	"primitives/confidential-assets",
	"primitives/zkhe",
	# Runtimes
	"runtimes/evm-rollup",
	# Confidential XCM Tests
	"xcm",
	# zkhe client/prover/verifier
	"zkhe/prover",
	"zkhe/vectors",
	"zkhe/verifier",
	"zkhe/verifier/per-block",
]
resolver = "2"

[workspace.package]
authors = [ "OpenZeppelin" ]
description = "Confidential Assets primitives, pallets, and precompiles"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/OpenZeppelin/polkadot-runtime-templates"

[workspace.dependencies]
clap = { version = "4.5.3", features = [ "derive" ] }
color-print = "0.3.4"
docify = { version = "0.2.9" }
futures = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4.1"
jsonrpsee = { version = "0.24.3", features = [ "server" ] }
log = { version = "0.4.21", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.11.1", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_derive = { version = "1.0.121", default-features = false }
serde_json = { version = "1.0.121", default-features = false }
smallvec = "1.11.0"

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2506" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }

# Cumulus
assets-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "stable2506" }

# EVM
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "bbb544622208ef6e9890a2dbc224248f6dd13318" }
fc-api = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-consensus = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-db = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fc-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fp-account = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false, features = [
	"serde",
] }
fp-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false, features = [
	"forbid-evm-reentrancy",
] }
pallet-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false, features = [
	"forbid-evm-reentrancy",
] }
pallet-evm-chain-id = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }
precompile-utils = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2506", default-features = false }

# ORML
orml-oracle = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-stable2506", default-features = false }
orml-oracle-runtime-api = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-stable2506", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-stable2506", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-stable2506", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-stable2506", default-features = false }

# Fuzzer
substrate-runtimes-fuzzers = { git = "https://github.com/srlabs/substrate-runtime-fuzzer.git", default-features = false, tag = "polkadot-stable2506" }
ziggy = { version = "0.8", default-features = false }

# Moonkit
nimbus-consensus = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2506", default-features = false }
nimbus-primitives = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2506", default-features = false }
pallet-author-inherent = { git = "https://github.com/Moonsong-Labs/moonkit", branch = "moonbeam-polkadot-stable2506", default-features = false }

# Dancekit
ccp-authorities-noting-inherent = { git = "https://github.com/OpenZeppelin/dancekit", branch = "polkadot-stable2506", default-features = false }
dp-consensus = { git = "https://github.com/OpenZeppelin/dancekit", branch = "polkadot-stable2506", default-features = false }
pallet-cc-authorities-noting = { git = "https://github.com/OpenZeppelin/dancekit", branch = "polkadot-stable2506", default-features = false }

# Tanssi
tc-consensus = { git = "https://github.com/moondance-labs/tanssi", branch = "tanssi-polkadot-stable2506-dry-run-test", default-features = false }

# Note: Removed patch section - instead, update workspace deps to use branch=stable2506
# to match frontier's polkadot-sdk dependency


[workspace.lints.clippy]
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
[profile.production]
codegen-units = 1
inherits = "release"
lto = true


[profile.release]
opt-level = 3
panic = "unwind"
